<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SystemHTablet</string>
    <string name="Menu">Menu</string>
    <string name="HouseName">Hale Pilihonua</string>
    <string name="Aquaponics">Aquaponics System</string>
    <string name="Lighting">Lighting System Controls</string>
    <string name="Hvac">Hvac System</string>
    <string name="Help">Help</string>
    <string name="Settings">User Settings</string>
    <string name="BackToMenu">Back To Menu</string>
    <string name="Confirm">Confirm</string>
    <string name="Close">Close</string>
    <string name="ColorPicker">Pick a Color</string>
    <string name="ChangeColor">Change Color</string>
    <string name="lightSwitch">Light Switch:</string>
    <string name="roomPrompt">Choose a room:</string>
    <string name="systemPrompt">Choose a system:</string>
    <string-array name="systems">
    	<item>Aquaponics</item>
    	<item>Lighting</item>
    	<item>Hvac</item>
    	<item>Energy</item>
    </string-array>
    <string-array name="rooms">
    	<item>Living Room</item>
    	<item>Dining Room</item>
    	<item>Kitchen</item>
    	<item>Bathroom</item>
    </string-array>
    <string-array name="feedAmount">
        <item>0.0</item>
        <item>0.5</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>5.0</item>
    </string-array>
    <string name="brightness">Brightness:</string>
    <string name="temperature">temperature:</string>
    <string name="waterTemp">Water Temperature</string>
    <string name="ph">PH Level</string>
    <string name="waterLevel">Water Level</string>
    <string name="waterNutrients">Water Nutrients</string>
    <string name="controls">Controls</string>
    <string name="electricalConductivity">Electrical Conductivity</string>
    <string name="oxygen">Dissolved Oxygen</string>
    <string name="waterCirculation">Water Circulation</string>
    <string name="waterTurbidity">Water Turbidity</string>
    <string name="dialogText">Please check the IP address of the running frontend</string>
    <string name="deadFish">Dead Fish</string>
    <string name="feeding">Feeding</string>
    <string name="selectFeedAmount">Select Feed Amount:</string>
    <string name="feedFish">Feed Fish</string>
    <string name="Energy">Energy</string>
    <string name="HvacCurrTempLabel">Current Home Temperature</string>
    <string name="DesiredHomeTemp">Desired Home Temperature</string>
    <string name="PVGeneration">Current Power Generation</string>
    <string name="PowerConsumption">Current Power Consumption</string>
    <string name="NetPower">Net Power</string>
</resources>
