<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView  
	android:id="@+id/Title"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/HouseName"
    android:textSize="80sp"
  	android:gravity="center_horizontal"
    android:layout_marginTop="60sp" 
    />

	<Button android:text="@string/Aquaponics"
			android:textSize="50sp"
			android:id="@+id/aquaponicsButton"
			android:layout_gravity="center" 
			android:layout_width="fill_parent"
			android:layout_height="120dip" 
			android:layout_marginTop="100dip"
			android:onClick="showAquaponicsPage">
	</Button>
	
	<Button android:text="@string/Lighting"
			android:textSize="50sp"
			android:id="@+id/lightingButton"
			android:layout_gravity="center" 
			android:layout_width="fill_parent"
			android:layout_height="120dip" 
			android:layout_marginTop="20dip"
			android:onClick="showLightingPage">
	</Button>
	
	<Button android:text="@string/Hvac"
			android:textSize="50sp"
			android:id="@+id/lightingButton"
			android:layout_gravity="center" 
			android:layout_width="fill_parent"
			android:layout_height="120dip" 
			android:layout_marginTop="20dip"
			android:onClick="showHvacPage">
	</Button>
	
	<Button android:text="@string/Help"
			android:textSize="50sp"
			android:id="@+id/lightingButton"
			android:layout_gravity="center" 
			android:layout_width="fill_parent"
			android:layout_height="120dip" 
			android:layout_marginTop="20dip"
			android:onClick="showHelpPage">
	</Button>
	
</LinearLayout>
