<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
<TextView  
	android:id="@+id/BackToMenu"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/BackToMenu"
    android:textSize="40sp"
    android:layout_alignParentRight="true"
    android:layout_marginTop="10sp" 
    android:layout_marginRight="10sp"
    android:clickable="true"
    android:onClick="showMenu"    
    />
    
 <TextView
 	android:id="@+id/Title"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:text="@string/Lighting"
 	android:textSize="50sp"
 	android:layout_marginTop="40sp" 
 	android:layout_below="@id/BackToMenu"
 	android:layout_centerHorizontal="true"
 	/>
 	
<TextView
	android:id="@+id/roomPrompt"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/roomPrompt"
	android:textSize="50sp"
	android:layout_marginTop="40sp"
	android:layout_below="@id/Title"	
	/>

<Spinner
	android:id="@+id/spinner"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="50sp"
    android:prompt="@string/roomPrompt"
    android:layout_marginLeft="20sp"
    android:layout_marginTop="47sp"
    android:layout_below="@id/Title"
    android:layout_toRightOf="@id/roomPrompt"    	
    android:background="#333333"
    android:paddingLeft="20sp"
 	android:paddingRight="20sp"
	/>
 	
<TextView android:text="@string/ChangeColor"
	android:textSize="50sp"
	android:id="@+id/changeColor"
	android:layout_gravity="center" 
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:layout_below="@id/spinner"
	android:layout_marginTop="40dip"	
	/>

 <View
 	android:id="@+id/color"
 	android:layout_width="120sp"
 	android:layout_height="60sp" 	
 	android:textSize="50sp"
 	android:layout_marginTop="45sp" 
 	android:layout_marginLeft="57sp"
 	android:layout_below="@id/spinner"
 	android:layout_toRightOf="@id/changeColor" 	
 	android:clickable="true"
 	android:onClick="changeColor"
 	android:background="#FFFFFF" 	
 	/>

</RelativeLayout>
