<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
	android:layout_height="match_parent" android:background="#202020"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView android:id="@+id/BackToMenu" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/BackToMenu"
		android:textSize="40sp" android:layout_alignParentRight="true"
		android:layout_marginTop="10sp" android:layout_marginRight="10sp"
		android:clickable="true" android:onClick="showMenu" android:textColor="#0000FF" />

	<TextView android:id="@+id/Title" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/Aquaponics"
		android:textSize="50sp" android:layout_marginTop="40sp"
		android:layout_below="@id/BackToMenu" android:layout_centerHorizontal="true"
		android:layout_marginBottom="20dip" />

	<!-- Data for Water Temperature -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/DataLayout" android:layout_below="@+id/Title"
		android:layout_width="match_parent" android:stretchColumns="1"
		android:background="@drawable/shape" android:layout_height="wrap_content"
		android:layout_margin="10dip" android:layout_marginTop="10dip">

		<TableRow android:layout_marginTop="10dip"
			android:layout_marginBottom="5dip">
			
			
			<TextView android:id="@+id/tempLabel" android:text="@string/waterTemp"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="25sp" android:textStyle="bold"
				android:layout_column="0" android:paddingLeft="30dip" />
			<TextView android:id="@+id/tempDataValue" android:text="00"
				android:layout_height="wrap_content" android:gravity="right"
				android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />
		<!-- Data for PH Level -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/phLabel" android:text="@string/ph" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/phDataValue" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />
		<!-- Data for Electrical Conductivity -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/ecLabel"
				android:text="@string/electricalConductivity" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/ecDataValue" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />

		<!-- Data for Oxygen -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/oxygenLabel"
				android:text="@string/oxygen" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/oxygenDataValue" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />

		<!-- Data for Water Level -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/levelLabel"
				android:text="@string/waterLevel" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/levelDataValue" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />

		<!-- Data for Water Circulation -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/circulationLabel"
				android:text="@string/waterCirculation" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/circulationDataValue" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />

		<!-- Data for Water Turbidity -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/turbidityLabel"
				android:text="@string/waterTurbidity" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/turbidityDataValue" />
		</TableRow>

		<View android:layout_width="fill_parent" android:layout_height="1dip"
			android:background="#202020" />

		<!-- Data for Dead Fish -->
		<TableRow android:layout_marginTop="5dip"
			android:layout_marginBottom="10dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:paddingLeft="30dip" android:id="@+id/deadFishLabel"
				android:text="@string/deadFish" />
			<TextView android:text="00" android:layout_height="wrap_content"
				android:gravity="right" android:layout_column="1" android:textSize="20sp"
				android:layout_marginTop="0dip" android:paddingRight="50dip"
				android:id="@+id/deadFishDataValue" />
		</TableRow>

	</TableLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textSize="40sp"
		android:layout_below="@id/DataLayout"
		android:layout_centerHorizontal="true" 
		android:id="@+id/Controls" android:text="@string/controls" />

	<!-- Water Temperature -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_below="@+id/Controls" android:layout_width="match_parent"
		android:stretchColumns="1" android:background="@drawable/shape"
		android:layout_height="wrap_content" android:id="@+id/TempLayout"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:layout_marginTop="15dip" android:layout_marginBottom="5dip">

		<TableRow android:layout_marginTop="10dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/tempTextView"
				android:text="@string/waterTemp" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:layout_span="2" android:paddingLeft="30dip" />
		</TableRow>

		<TableRow>
			<TextView android:text="99.99" android:layout_height="wrap_content"
				android:layout_marginTop="12dip" android:layout_marginLeft="25dip"
				android:id="@+id/tempValue" android:textSize="20sp"
				android:layout_column="0" android:layout_width="60dip" />
			<SeekBar android:progress="50" android:paddingTop="0dip"
				android:layout_margin="10dip" android:layout_marginTop="30dip"
				android:max="100" android:paddingLeft="20dip" android:paddingRight="30dip"
				android:layout_height="wrap_content" android:id="@+id/tempSeekbar"
				android:layout_column="1" android:layout_width="match_parent"
				android:layout_marginLeft="0dip" />

		</TableRow>
	</TableLayout>

	<!-- PH Level -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		 android:layout_width="match_parent"
		android:stretchColumns="1" android:background="@drawable/shape"
		android:layout_height="wrap_content" android:id="@+id/PhLayout"
		android:layout_below="@+id/TempLayout" android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
		<TableRow android:layout_marginTop="10dip">
			<TextView android:layout_height="wrap_content" android:id="@+id/phTextView"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0" android:text="@string/ph"
				android:layout_span="2" android:paddingLeft="30dip" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/phValue" android:text="0.0"
				android:textSize="20sp" android:layout_height="wrap_content"
				android:layout_marginTop="12dip" android:layout_marginLeft="25dip"
				android:layout_column="0" android:layout_width="60dip" />
			<SeekBar android:id="@+id/phSeekBar" android:layout_height="wrap_content"
				android:layout_width="match_parent" android:layout_column="1"
				android:progress="0" android:max="140" android:layout_margin="10dip"
				android:layout_marginTop="30dip" android:paddingLeft="20dip"
				android:paddingRight="30dip" />
		</TableRow>
	</TableLayout>

	<!-- Water Level -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_marginTop="5dip" android:layout_width="match_parent"
		android:stretchColumns="1" android:background="@drawable/shape"
		android:layout_height="wrap_content" android:id="@+id/LevelLayout"
		android:layout_below="@+id/PhLayout" android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
		<TableRow android:layout_marginTop="10dip">
			<TextView android:id="@+id/levelTextView" android:text="@string/waterLevel"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="25sp" android:textStyle="bold"
				android:layout_column="0" android:layout_span="2"
				android:paddingLeft="30dip" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/levelValue" android:text="50"
				android:textSize="20sp" android:layout_height="wrap_content"
				android:layout_marginTop="12dip" android:layout_marginLeft="25dip"
				android:layout_column="0" android:layout_width="60dip" />
			<SeekBar android:id="@+id/levelSeekBar"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:progress="50" android:max="100" android:layout_column="1"
				android:layout_margin="10dip" android:layout_marginTop="30dip"
				android:paddingLeft="20dip" android:paddingRight="30dip" />
		</TableRow>
	</TableLayout>

	<!-- Water Nutrients -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_marginTop="5dip" android:layout_width="match_parent"
		android:stretchColumns="1" android:background="@drawable/shape"
		android:layout_height="wrap_content" android:id="@+id/NutrientsLayout"
		android:layout_below="@+id/LevelLayout" android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
		<TableRow android:layout_marginTop="10dip">
			<TextView android:id="@+id/nutrientsTextView" android:text="@string/waterNutrients"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="25sp" android:textStyle="bold"
				android:layout_column="0" android:layout_span="2"
				android:paddingLeft="30dip" />
		</TableRow>
		<TableRow>
			<TextView android:id="@+id/nutrientsValue" android:text="00"
				android:textSize="20sp" android:layout_height="wrap_content"
				android:layout_marginTop="12dip" android:layout_marginLeft="25dip"
				android:layout_column="0" android:layout_width="60dip" />
			<SeekBar android:id="@+id/nutrientsSeekBar"
				android:layout_height="wrap_content" android:layout_width="match_parent"
				android:progress="00" android:max="100" android:layout_column="1"
				android:layout_margin="10dip" android:layout_marginTop="30dip"
				android:paddingLeft="20dip" android:paddingRight="30dip" />
		</TableRow>
	</TableLayout>

	<!-- Feed Fish -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_marginTop="5dip" android:layout_width="match_parent"
		android:stretchColumns="1" android:background="@drawable/shape"
		android:layout_height="wrap_content" android:layout_below="@+id/NutrientsLayout"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:id="@+id/FeedFishLayout">
		<TableRow android:layout_marginTop="10dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="25sp"
				android:textStyle="bold" android:layout_column="0"
				android:layout_span="3" android:paddingLeft="30dip" android:id="@+id/feedFishTextView"
				android:text="@string/feeding" />
		</TableRow>
		<TableRow android:layout_marginBottom="10dip">
			<TextView android:textSize="20sp" android:layout_height="wrap_content"
				android:layout_marginTop="3dip" android:layout_marginLeft="100dip"
				android:layout_column="0" android:id="@+id/feedFishLabel"
				android:text="@string/selectFeedAmount" android:layout_width="wrap_content" />
			<Spinner android:id="@+id/feedSpinner" android:layout_height="wrap_content"
				android:layout_marginRight="80dip"
				android:layout_marginLeft="40dip" android:layout_width="wrap_content"/>
			<Button android:layout_column="3" android:background="#009900" android:textSize="20sp"
				android:paddingLeft="10dip" android:id="@+id/feedFishButton" android:text="@string/feedFish"
				android:layout_height="40sp" android:layout_width="wrap_content" android:layout_marginRight="130dip" android:paddingRight="10dip"/>
		</TableRow>

	</TableLayout>

</RelativeLayout>


 