<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
<TextView  
	android:id="@+id/BackToMenu"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/BackToMenu"
    android:textSize="40sp"
    android:layout_alignParentRight="true"
    android:layout_marginTop="10sp" 
    android:layout_marginRight="10sp"
    android:clickable="true"
    android:onClick="showMenu"    
    />
    
 <TextView
 	android:id="@+id/Title"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:text="@string/Help"
 	android:textSize="50sp"
 	android:layout_marginTop="40sp" 
 	android:layout_below="@id/BackToMenu"
 	android:layout_centerHorizontal="true"
 	/>

  <TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" 
	android:stretchColumns="2"
	android:background="@drawable/shape" 
	android:layout_below="@id/Title"
	android:layout_height="wrap_content" 
	android:id="@+id/systemLayout"
	android:layout_marginTop="60dip" 
	android:layout_marginLeft="10dip"
	android:layout_marginRight="10dip">

	<TableRow>
	
	  <TextView 
	    android:id="@+id/systemPrompt" 
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/systemPrompt"
		android:textSize="50sp" 
		android:paddingLeft="10sp" 
		/>

	  <Spinner 
	    android:id="@+id/spinner" 
	    android:layout_width="380sp"
		android:layout_height="wrap_content" 
		android:prompt="@string/systemPrompt"
		android:layout_toRightOf="@id/systemPrompt" 
		android:layout_marginLeft="17sp"
		android:layout_marginBottom="10dip" 
		/>
		
		</TableRow>
		
	</TableLayout>
  <ScrollView   
    android:id="@+id/ScrollView"  
    android:layout_height="fill_parent"   
    android:layout_width="fill_parent"
    android:layout_marginTop="40sp" 
 	android:layout_below="@id/systemLayout"
 	android:layout_centerHorizontal="true">
 	
    <TextView
 	  android:id="@+id/helpContent"
 	  android:layout_width="wrap_content"
 	  android:layout_height="wrap_content"
 	  android:text=""
 	  android:textSize="30sp"
 	/>
 	
 	</ScrollView>
 	
</RelativeLayout>
